# scidock

./: .gitignore  README.md  coverage.lcov  pyproject.toml  ruff.toml  scidock.py  ui.py  utils.py
.github/: dependabot.yml
.github/workflows/: benchmark.yml  lint.yml  test.yml  test_server.yml
config/: __init__.py  logging.yaml
scidock/: scidock.py  ui.py  utils.py
scidock/config/: __init__.py  logging.yaml
scidock/parsers/: mathml_parser.py  query_parser.py
scidock/search_engines/: arxiv_engine.py  crossref_engine.py  query_parser.py  scihub_engine.py  web_parser.py
search_engines/: _query_parser.py  arxiv.py  arxiv_engine.py  crossref.py  crossref_engine.py  metadata.py  query_parser.py  scihub_engine.py
server/: compose.yaml
server/nlp/: Dockerfile  light.Dockerfile  ruff.toml  tiny.Dockerfile
server/nlp/light/: main.py
server/nlp/tiny/: main.py
server/web/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  run_tests.sh
server/web/etc/: run_tests.sh
server/web/tests/: test_connectors.py  test_integration.py  test_publisher_parser.py
server/web/web/: main.py  utils.py
server/web/web/connectors/: arxiv.py  crossref.py  nlp.py  scihub.py
server/web/web/log/: __init__.py
server/web/web/meta/: metadata.py  publisher_patterns.py
server/web/web/parsers/: atom.py  mathml.py  metadata.py  publishers.py  query.py
tests/: __init__.py  test_fs.py  test_search.py
