[tool.poetry]
name = "scidock"
version = "0.1.0"
description = ""
authors = ["kgleba <kgleba@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = { version = "^2.32.0", extras = ["socks"] }
crossrefapi = "^1.6.0"
arxiv = { git = "https://github.com/lukasschwab/arxiv.py.git" }
rich = "^13.7.1"
questionary = "^2.0.1"
click-params = "^0.5.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[tool.poetry.scripts]
scidock = "scidock:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
