[tool.poetry]
name = "scidock"
version = "0.1.0"
description = ""
authors = ["kgleba <kgleba@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = { version = "^2.32.3", extras = ["socks"] }
crossrefapi = "^1.6.0"
arxiv = "^2.1.2"
rich = "^13.7.1"
questionary = "^2.0.1"
click-params = "^0.5.0"
beautifulsoup4 = "^4.12.3"
rapidfuzz = "^3.9.3"
pyyaml = "^6.0.1"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[tool.poetry.scripts]
scidock = "scidock.scidock:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
